# UCWC

./: .gitignore  README.md  pyproject.toml
agent/: README.md  __init__.py  agent.py  audit_log.py  command_tools.py  context.py  editing_tools.py  llm.py  main.py  tools.py  ucwc_loop.py  ucwc_prompts.py  ucwc_tools.py  workspace_tools.py
configs/: README.md  simulation.yaml  static_network.yaml
configs/catalogs/: phy_modes.yaml  semantic_catalog_smoke.yaml
configs/experiments/: e1_main.yaml  semantic_link_smoke.yaml
configs/llm/: README.md
configs/radiomapseer_demo/: simulation.yaml  static_network.yaml
configs/radiomapseer_real/: service_profiles.yaml  simulation.yaml  static_network.yaml
configs/scenarios/: semantic_radiomapseer.yaml
data/: README.md
docs/: project_outline.md
scripts/: README.md  benchmark_semantic_encoder_latency.py  build_scenario.py  cache_cifar10_semantic_features.py  generate_random_semantic_user_configs.py  generate_semantic_ucwc_state.py  init_semantic_weights.py  prepare_radiomapseer_subset.py  run_agent_demo.py  run_cifar10_cached_layer_head_eval.py  run_cifar10_cached_semantic_link_eval.py  run_cifar10_layer_decoder_eval.py  run_semantic_link_smoke.py  run_ucwc_admission_agent.py  test_channel_cliff_effect.py  validate_semantic_ucwc_oracle.py
tests/: README.md  test_agent_admission.py  test_semantic_link.py
ucwc/: __init__.py  association.py  channel_model.py  components.py  config_loader.py  config_plan.py  physics_tools.py  scenario_builder.py  table_manager.py  verifier.py
ucwc/agent/: README.md  __init__.py  (+9 more)
(+56 files in other folders)
