[project]
name = "ucwc"
version = "0.1.0"
description = "Semantic UCWC orchestration prototype with NL2SQL grounding and deterministic verification."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
