[project]
name = "ucwc"
version = "0.1.0"
description = "Semantic UCWC orchestration prototype with NL2SQL grounding and deterministic verification."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "packaging>=23.0",
  "pillow>=9.0",
  "pyyaml>=6.0",
  "torch>=2.0",
  "torchvision>=0.15",
  "tqdm>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
